# LearnLibtom

./: .gitignore  AES.cpp  AES.h  CMakeLists.txt  HASH.cpp  HASH.h  HMAC.cpp  HMAC.h  Makefile  README.md  Test.cpp  Test.h  Utils.cpp  Utils.h  main.cpp
include/: tomcrypt_custom.h  tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_math.h
